src/objects/Daily_Product_Rate__c.object
<CustomObject>
    <description>Update daily rates by product.  Updates here sent to Baydocs.</description>
    <fields>
        <fullName>Processed_Date__c</fullName>
        <formula>Processed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <description>Has the rate been processed (ex:</description>
        <label>Processed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_Rate_Type__c</fullName>
        <description>product rate type</description>
        <label>Product Rate Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HELO-LIBOR</fullName>
                </value>
                <value>
                    <fullName>HELO-BrokerComp</fullName>
                    <label>HELO-Broker Comp</label>
                </value>
                <value>
                    <fullName>HELO-OrigFee</fullName>
                    <label>HELO-Origination Fee</label>
                </value>
                <value>
                    <fullName>HELO-ORIGINATION</fullName>
                    <isActive>false</isActive>
                    <label>HELO-ORIGINATION</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate2__c</fullName>
        <inlineHelpText>Required if Helo-Origination Fee is selected</inlineHelpText>
        <label>Rate 2 (HELO-Orig Fee)</label>
        <precision>12</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate3__c</fullName>
        <inlineHelpText>Required if Helo-Origination Fee is selected</inlineHelpText>
        <label>Rate 3 (HELO-Orig Fee)</label>
        <precision>12</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_Date__c</fullName>
        <description>Date this rate is valid for</description>
        <label>Rate Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>12</precision>
        <required>true</required>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <label>Daily Product Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Product_Rate_Type__c</columns>
        <columns>Rate__c</columns>
        <columns>Rate_Date__c</columns>
        <columns>Processed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}-{YYYY}{MM}{DD}</displayFormat>
        <label>Product Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Product Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DailyProductRateValidRate</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
ISBLANK(Rate__c),
Rate__c &lt; 0.00000
)</errorConditionFormula>
        <errorDisplayField>Rate__c</errorDisplayField>
        <errorMessage>Rate requires a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DailyProductRateValidRate2</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Product_Rate_Type__c, &apos;HELO-OrigFee&apos;), 
OR(OR(Rate2__c &lt; 0.00000, ISBLANK(Rate2__c)),
OR(Rate3__c &lt; 0.00000, ISBLANK(Rate3__c)))
)</errorConditionFormula>
        <errorDisplayField>Product_Rate_Type__c</errorDisplayField>
        <errorMessage>HELO-Origination Fee REQUIRES a value in Rate, Rate2, and Rate3</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateRate2</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(Rate2__c)),
Rate2__c &lt; 0.0000
)</errorConditionFormula>
        <errorDisplayField>Rate2__c</errorDisplayField>
        <errorMessage>Rate 2 cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateRate3</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT(ISBLANK(Rate3__c)), 
Rate3__c &lt; 0.0000 
)</errorConditionFormula>
        <errorDisplayField>Rate3__c</errorDisplayField>
        <errorMessage>Rate 3 requires a numeric value</errorMessage>
    </validationRules>
</CustomObject>